added correct shed/tree/boulder guess counter

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <div>You guessed Tree: <span id="tree-guesses">0</span> times.</div>
             <div>You guessed Boulder: <span id="boulder-guesses">0</span> times</div>
             <div>You guessed Shed: <span id="shed-guesses">0</span> times</div>
+            <div>You guessed Tree correctly: <span id="tree-corrects">0</span> times.</div>
+            <div>You guessed Boulder correctly: <span id="boulder-corrects">0</span> times</div>
+            <div>You guessed Shed correctly: <span id="shed-corrects">0</span> times</div>
             
             
         </section>
